# ProjetoEC

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_test_dbs.sh  test_sql_tool.py
.github/workflows/: ci.yml
data/: dataset_pubmed_preventive.json  pmc_preventive_medicine_clean.json  pmc_simples.json  schema.sql  wuenic-input.xlsx
database/: schema.sql
etl/: extract.py  load.py  run_etl.py  transform.py
src/: api_ingestion.py  app.py  db_connection.py  medlineplus_ingestion.py  rag.py
src/agents/: mongo_tool.py  mongo_tool_terminal.py  prompt.yaml  prompts.yaml  selection_agent_terminal.py  tool_selection_agent.py
src/api/: Dockerfile  chat.py  main.py  rules.py
src/crawlers/: __init__.py  chromabd_manual.py  chromadb_ingest.py  home_remedies_ingest.py  pmc_crawler.py  pmc_crawler_simples.py  pubmed_crawler.py  test_chromabd.py
src/ingestion/: __init__.py
src/ingestion/api/: __init__.py  gho.py
src/ingestion/etl/: __init__.py  brfss.py  cdi.py  global_health.py  symptoms.py  wuenic.py
src/rag/: pipeline.py
src/sql/: sql_query_tool.py
src/utils/: db_connection.py  ingest_BRFSS.py  ingest_CDI.py  ingest_drugs.py  ingest_global_health.py  ingest_symptoms.py  ingest_wuenic.py
tests/: __init__.py  test_dbs.py
utils/: db.py
