[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-saude"
version = "0.1.0"
requires-python = ">=3.11"
description = "DrHouseGPT - Chatbot for health diagnostics and data ingestion"

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingestion*", "crawlers*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
